--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-redux": "^5.0.7",
-    "redux": "^3.2.1",
-    "redux-thunk": "^2.2.0"
+    "prop-types": "^15.6.1"
   },
   "devDependencies": {
     "babel-loader": "^8.0.5",
@@ -21,7 +16,12 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
     "node-sass": "^4.11.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "4.28.3"
   },
   "browserslist": [
