--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start src/index.js",
-    "build": "react-scripts build src/index.js"
+    "build": "react-scripts build src/index.js",
+    "test": "react-scripts test"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
